--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@
 
 :root {
   --gutter: 10px;
+  --color-bg-3: #F4F5F7;
   --color-bg-hd: #cccccc;
   --color-bg: #ffffff;
   --color-bg-bl: #0e0e0e;
@@ -144,6 +145,9 @@ h7,
 }
 
 .btn {
+  text-decoration: none;
+  min-width: 180px;
+  border: solid 1px #000000;
   cursor: pointer;
   font-family: "Arial";
   font-size: 1.6rem;
@@ -153,6 +157,21 @@ h7,
   padding: 15px;
   display: inline-block;
   border-radius: 4px;
+}
+
+.btn__back {
+  cursor: pointer;
+  font-family: "Arial";
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 0.9375;
+  letter-spacing: 0.04em;
+  padding: 15px;
+  display: inline-block;
+  border-radius: 4px;
+  color: var(--color-text-black);
+  border: solid 1px var(--color-text-black);
+  background-color:var(--color-text-white);
 }
 
 .btn__tag {
@@ -182,11 +201,18 @@ h7,
 
 .btn__solid {
   text-decoration: none;
+  min-width:200px;
+  opacity: 0.85;
   background-color: var(--color-text-black);
   color: var(--color-bg) !important;
   border: solid 1px var(--color-text-black);
 }
 
+.btn__solid:hover{
+  opacity: 1;
+  box-shadow: 2px 2px 5px #4a4a4a;
+  transition: text-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
 .image_login {
   width: 16px;
 }
@@ -223,6 +249,7 @@ h7,
   border: none;
   color: var(--color-gray);
   height: 100%;
+  width: 140px;
   border-radius: var(--btn-radius);
   border: 1px solid #d0d0d0;
 }
@@ -235,11 +262,11 @@ h7,
   right: 0;
   z-index: 10;
   box-shadow: #e1e3e5 0px 1px 0px 0px;
-  background-color: var(--color-bg-hd);
+  background-color: var(--color-bg-3);
 }
 
 .header__topbar {
-  background-color: var(--color-bg);
+  background-color: var(--color-bg-3);
   color: var(--color-text-black);
   box-shadow: inset 0px -1px 0px #e1e3e5;
 }
@@ -287,7 +314,7 @@ h7,
   position: relative;
   top: 0;
   z-index: 10;
-  background-color: var(--color-bg);
+  background-color: var(--color-bg-3);
 }
 
 .header__container {
@@ -320,7 +347,7 @@ h7,
   left: 0;
   width: calc(100vw - 40px);
   height: calc(100vh - 87px);
-  background-color: var(--color-bg);
+  background-color: var(--color-bg-3);
   flex-direction: column;
   transition: var(--smooth);
   transform: translateX(-100%);
@@ -364,6 +391,7 @@ h7,
   line-height: 40px;
   padding: 0 32px;
   color: var(--color-text-black);
+  background-color: var(--color-bg-3);
   border-bottom:3px solid transparent;
 }
 
@@ -374,12 +402,12 @@ h7,
   color: var(--color-text-black);
 }
 
-.nav__item .nav__anchor:hover {
+.nav__item:hover .nav__anchor {
   text-decoration: underline;
   text-decoration-thickness: 2px;
-  background-color: var(--color-bg-2);
-  border-bottom-color: #0e0e0e;
-  color: #873e23;
+  border-bottom-color: var(--color-red);
+  background-color: var(--color-bg-3);
+  color: var(--color-red);
 }
 
 .header__subnav {
@@ -408,9 +436,14 @@ h7,
 
 .header__subnav .nav__anchor2 {
   text-decoration: none;
-  line-height: 40px;
-  padding: 0 10px;
+  line-height: 30px;
+  padding: 0 15px;
   color: var(--color-text-white);
+}
+
+.header__subnav .nav__anchor2:hover {
+  opacity: 1;
+  color: var(--color-red);
 }
 
 .svg__icon {
@@ -427,13 +460,17 @@ h7,
 #search-box {
   border-radius: 30px;
   min-width: 20px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 #search-box.open {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
+
+
 .search-btn {
+  display: block;
   cursor: pointer;
   width: 20px;
   height: 20px;
@@ -449,27 +486,28 @@ h7,
   background-color: transparent;
   border: none;
   right: 10px;
-  display: none;
+  display: block;
   transition: all 0.25s ease-in;
 }
 
 .search__input {
+  display: block;
   border: none;
   outline: none;
   background-color: transparent;
-  width: 0;
+  width: 270px;
   transition: all 0.25s ease-in-out;
 }
 
 #search-box.open .search__input,
-#search-box .search__input:valid {
-  cursor: pointer;
-  width: 250px;
+#search-box .search__input{
+  /* cursor: pointer; */
+  width: 270px;
   padding: 10px 20px 10px 35px;
 }
 
 #search-box.open .voice-btn,
-#search-box .search__input:valid.voice-btn {
+#search-box .search__input .voice-btn {
   display: block;
   transition: all 0.25s ease-in;
 }
@@ -637,8 +675,9 @@ h7,
   bottom: 0;
   z-index: -1;
   border-radius: 20px;
-  background-color: var(--color-dark);
-  opacity: 20%;
+  background-color: var(--color-bg-3);
+  opacity: 30%;
+  color: #000000;
 }
 
 .banner__overlay {
@@ -900,7 +939,7 @@ h7,
   right: 8px;
   padding: 4px 12px;
   color: var(--color-text-white);
-  background-color: #da5555;
+  background-color: var(--color-red);
   border-radius: 12px;
 }
 
@@ -931,7 +970,7 @@ h7,
   letter-spacing: 0.04em;
   margin-right: 10px;
   opacity: 0.5;
-  color: #da5555;
+  color: var(--color-red);
 }
 
 .product__price--new {
@@ -964,8 +1003,8 @@ h7,
   border: solid 1px var(--color-text-black);
 }
 .btn__view--all:hover {
-  background-color: var(--color-bg-bl);
-  color: var(--color-text-white);
+  box-shadow: 2px 2px 5px #4a4a4a;
+  transition: text-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 /* === image width text === */
@@ -1134,7 +1173,8 @@ h7,
 
 .select__option select {
   outline: none;
-  width: 100px;
+  margin-left: 10px;
+  width: 140px;
   height: 44px;
   padding-inline: 10px;
   border: solid 1px #d0d0d0;
@@ -1249,6 +1289,7 @@ h7,
 .product-detail__variant--item {
   cursor: pointer;
   font-size: 1.3rem;
+  
   padding: 8px 12px;
   line-height: 1.3;
   letter-spacing: 0.03em;
@@ -1270,6 +1311,12 @@ h7,
   margin-bottom: 13px;
 }
 
+.size__heading {
+  margin: 0;
+  margin-bottom: 13px;
+  margin-left: 12px;
+}
+
 .product-detail__addtocart {
   /* max-width: 180px; */
   max-width: 300px;
@@ -1287,6 +1334,8 @@ h7,
 
 .product-detail__addtocart:hover {
   opacity: 1;
+  box-shadow: 2px 2px 5px #4a4a4a;
+  transition: text-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 .product-detail__buynow {
@@ -1303,8 +1352,10 @@ h7,
 }
 
 .product-detail__buynow:hover {
-  background-color:var(--color-bg-bl);
-  color:var(--color-text-white);
+  box-shadow: 2px 2px 5px #292929;
+  transition: text-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+  color:var(--color-dark);
+  opacity: 1;
 }
 
 .product-detail__description {
@@ -1788,7 +1839,7 @@ h7,
 .pagination__items {
   gap: var(--gutter);
   margin: 0;
-  padding: 0;
+  padding: 10px;
   list-style: none;
 }
 
@@ -1800,7 +1851,7 @@ h7,
 .pagination__item .pagination__anchor {
   display: inline-block;
   padding: 5px 12px;
-  border-radius: 50%;
+  border-radius: 100%;
   color: var(--color-text-black);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -1847,6 +1898,7 @@ h7,
 
 .my-account__title {
   margin: 0;
+  color: var(--color-text-white);
 }
 
 .my-account__content .table {
@@ -2162,7 +2214,8 @@ th {
   bottom: 0;
   height: 3px;
   border-radius: 5px;
-  background: linear-gradient(135deg, #71b7e6, #1dbfaf);
+  /* background: linear-gradient(135deg, #71b7e6, #1dbfaf); */
+  background: var(--color-bg-2);
   transition: width 0.3s ease-in-out;
 }
 .register .content .register__form .user-details {
@@ -2223,7 +2276,7 @@ th {
 #dot-1:checked ~ .category label .one,
 #dot-2:checked ~ .category label .two,
 #dot-3:checked ~ .category label .three {
-  background: #1dbfaf;
+  background: #da5555;
   border-color: #d9d9d9;
 }
 .register__form input[type="radio"] {
@@ -2234,25 +2287,33 @@ th {
   margin: 35px 0;
 }
 .register__form .button input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
+  margin: auto;
+  text-align: center;
   width: 100%;
   border-radius: 5px;
-  border: none;
-  color: #fff;
+  color: var(--color-text-black);
   font-size: 18px;
   font-weight: 500;
   letter-spacing: 1px;
   cursor: pointer;
   transition: all 0.3s ease;
-  background: linear-gradient(135deg, #71b7e6, #1dbfaf);
+  /* background: linear-gradient(135deg, #71b7e6, #1dbfaf); */
+  background:var(--color-text-white);
 }
 .register__form .button input:hover {
   /* trans.register__form: scale(0.99); */
-  background: linear-gradient(-135deg, #71b7e6, #1dbfaf);
+  background-color:#da5555;
+  opacity: .8;
+  color: var(--color-text-white);
+  box-shadow:  2px 2px 5px #4a4a4a;
 }
 
 .register .text-login {
-  color: #71b7e6;
+  color: #010101;
 }
 
 /* form validate */
@@ -2463,7 +2524,7 @@ th {
 .sidebar__item--label {
   color: var(--color-text-black);
   padding: 5px 0;
-  opacity: .8;
+  opacity: 0.9;
 }
 
 .sidebar__item--heading h3{
@@ -2478,7 +2539,7 @@ th {
 
 ::selection{
   color: var(--color-bg);
-  background: var(--color-blue);
+  background: var(--color-red);
 }
 .price-input{
   width: 100%;
@@ -2552,7 +2613,7 @@ input[type="range"]::-webkit-slider-thumb{
   width: 17px;
   border-radius: 50%;
   /* background: var(--color-gray-dark); */
-  background: #da5555;
+  background: var(--color-red);
   pointer-events: auto;
   -webkit-appearance: none;
   box-shadow: 0 0 6px rgba(0,0,0,0.05);
@@ -2562,7 +2623,7 @@ input[type="range"]::-moz-range-thumb{
   width: 17px;
   border: none;
   border-radius: 50%;
-  background: #da5555;
+  background: var(--color-red);
   pointer-events: auto;
   -moz-appearance: none;
   box-shadow: 0 0 6px rgba(0,0,0,0.05);
@@ -2597,7 +2658,7 @@ input[type="range"]::-moz-range-thumb{
 }
 
 .variant__active {
-  background-color: #da5555;
+  background-color: var(--color-red);
   color: var(--color-text-black);
 }
 
@@ -2709,7 +2770,7 @@ input[type="range"]::-moz-range-thumb{
   height: 16px;
   display: block;
   margin-right: 3px;
-  background-color: #da5555;
+  background-color: var(--color-red);
   -webkit-mask-image: url(https://asset.vuahanghieu.com/assets/images/rating-star.svg);
   mask-image: url(https://asset.vuahanghieu.com/assets/images/rating-star.svg);
   -webkit-mask-size: contain;
@@ -2796,7 +2857,7 @@ input[type="range"]::-moz-range-thumb{
   content: "";
   width: 18px;
   height: 18px;
-  background-color: #da5555;
+  background-color: var(--color-red);
   -webkit-mask-image: url(https://asset.vuahanghieu.com/assets/images/rating-star.svg);
   mask-image: url(https://asset.vuahanghieu.com/assets/images/rating-star.svg);
   -webkit-mask-size: contain;
@@ -2855,11 +2916,7 @@ abbr {
 }
 
 .review-star-list {
-  margin: 0 auto;
   margin-bottom: 5px;
-  align-items: center;
-  align-content: center;
-  text-align: center;
 }
 
 .comment-item {
