--- a/assets/css/helper.css
+++ b/assets/css/helper.css
@@ -3,6 +3,15 @@
     padding-bottom: 40px;
 }
 
+.pd-section-my-acc {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.pd-section-product-detail {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .pd-top {
     padding-top: 40px;
 }
@@ -10,9 +19,22 @@
 .pd-t-20{
     padding-top: 20px;
 }
+.pd-t-25{
+    padding-top: 25px;
+}
+.pd-t-30{
+    padding-top: 30px;
+}
+.pd-t-5{
+    padding-top: 5px;
+}
 
 .pd-bottom {
     padding-bottom: 40px;
+}
+
+.pd-l-10{
+    padding-left: 10px;
 }
 
 .w-100 {
@@ -27,6 +49,9 @@
     width: calc(100% / 3);
 }
 
+.mg-t-5 {
+    margin-top: 5px;
+}
 .mg-t-10 {
     margin-top: 10px;
 }
@@ -153,7 +178,7 @@
     }
 
     .pd-top {
-        padding-top: 60px;
+        padding-top: 40px;
     }
     
     .pd-bottom {
